--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -515,7 +515,37 @@
     "yes": "Yes",
     "zero": "Zero"
   },
-  "gis": {},
+  "gis": {
+    "quotation":{
+      "new_client":"New Client",
+      "existing_client":"Existing Client",
+      "name":"Name",
+      "year_of_manufacture":"Year of Manufacture",
+      "value":"Value",
+      "basic_premium":"Basic Premium",
+      "levies_and_taxes":"Levies and Taxes",
+      "total_payable_premium":"Total Payable Premium",
+      "value_of_vehicle":"Value of Vehicle",
+      "premium":"Premium",
+      "add_more_benefits":"Add more benefits",
+      "view_cover_details":"View Cover Details",
+      "share_quote":"Share Quote",
+      "select_cover":"Select Cover",
+      "additional_benefits":"Additional Benefits",
+      "excess_applicable_under_the_cover":"Excess applicable under the cover",
+      "cover_details":"Cover Details",
+      "details":"Details",
+      "benefits":"Benefits",
+      "close":"Close",
+      "quote-details":"Quote details",
+      "quote-number":"Quote number",
+      "name_of_insured":"Name of insured",
+      "intermediary":"Intermediary",
+      "add_another_risk":"Add another risk",
+      "cancel_quote":"Cancel quote",
+      "accept_quote":"Accept quote"
+    }
+  },
   "lms": {
     "common": {},
     "ind": {},
