--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -544,8 +544,22 @@
       "add_another_risk": "Agregar otro riesgo",
       "cancel_quote": "Cancelar Cotización",
       "accept_quote": "Aceptar Cotización"
+    },
+    "policy": {
+      "underwriting_new_transaction": "Suscripción:Nueva transacción",
+      "type_of_transaction": "Tipo de transacción",
+      "new_business": "Nuevo negocio",
+      "endorsement": "Endoso",
+      "contra_transaction": "Transacción contra",
+      "mid_term_endorsement": "Endoso a medio plazo",
+      "is_the_policy_short_period": "¿Es la póliza de corto período?",
+      "is_the_policy_renewable": "¿Es renovable la póliza?",
+      "is_it_a_new_client": "¿Es un cliente nuevo?",
+      "cancel": "Cancelar",
+      "next": "Siguiente",
+      "yes": "Sí",
+      "no": "No"
     }
-    
   },
   "lms": {
     "common": {},
