VQ-1590:Implement Searchable Drop down for Available Policy Interface Type (Cash) on Policy Product Screen.

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -550,41 +550,40 @@
       "cancel_quote": "取消报价",
       "accept_quote": "接受报价"
     },
-    "policy":{
-      "underwriting_new_transaction":"核保：新交易",
-      "type_of_transaction":"交易类型",
+    "policy": {
+      "underwriting_new_transaction": "核保：新交易",
+      "type_of_transaction": "交易类型",
       "new_business": "新业务",
       "endorsement": "批单",
       "contra_transaction": "对折交易",
       "mid_term_endorsement": "中期批改",
       "is_the_policy_short_period": "保单是否短期",
-      "is_the_policy_renewable":"保单是否可续保",
-      "is_it_a_new_client":"是否新客户",
+      "is_the_policy_renewable": "保单是否可续保",
+      "is_it_a_new_client": "是否新客户",
       "cancel": "取消",
       "next": "下一步",
       "yes": "是",
       "no": "否",
-      "underwriting_product_details":"保单产品详情",
-      "client":"客户",
-      "joint_account":"联名账户",
-      "product":"产品",
-      "policy_interface_type":"保单接口类型",
-      "policy_type":"保单类型",
-      "branch":"分支机构",
-      "source":"来源",
-      "marketer":"销售员",
-      "introducer":"介绍人",
-      "contract_name":"合同名称",
-      "cash_applicable":"返现适用",
-      "scheme_policy":"方案保单",
-      "policy_level_debit":"保单级借方",
-      "open_policy":"开放式保单",
-      "coinsurance_policy":"合同再保险保单",
-      "more_details":"更多详情"
+      "underwriting_product_details": "保单产品详情",
+      "client": "客户",
+      "joint_account": "联名账户",
+      "product": "产品",
+      "policy_interface_type": "保单接口类型",
+      "policy_type": "保单类型",
+      "branch": "分支机构",
+      "source": "来源",
+      "marketer": "销售员",
+      "introducer": "介绍人",
+      "contract_name": "合同名称",
+      "cash_applicable": "返现适用",
+      "scheme_policy": "方案保单",
+      "policy_level_debit": "保单级借方",
+      "open_policy": "开放式保单",
+      "coinsurance_policy": "合同再保险保单",
+      "more_details": "更多详情",
+      "cash": "现金",
+      "accrual": "应计"
     }
-
-    
-    
   },
   "lms": {
     "common": {},
