--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -550,41 +550,40 @@
       "cancel_quote": "Annuler la Cotation",
       "accept_quote": "Accepter la Cotation"
     },
-    "policy":{
-      "underwriting_new_transaction":"Souscription : Nouvelle transaction",
-      "type_of_transaction":"Type de transaction",
+    "policy": {
+      "underwriting_new_transaction": "Souscription : Nouvelle transaction",
+      "type_of_transaction": "Type de transaction",
       "new_business": "Nouveau contrat",
       "endorsement": "Avenant",
       "contra_transaction": "Transaction contraire",
       "mid_term_endorsement": "Avenant à mi-parcours",
       "is_the_policy_short_period": "La police est-elle à courte période",
-      "is_the_policy_renewable":"La police est-elle renouvelable",
-      "is_it_a_new_client":"Est-ce un nouveau client",
+      "is_the_policy_renewable": "La police est-elle renouvelable",
+      "is_it_a_new_client": "Est-ce un nouveau client",
       "cancel": "Annuler",
       "next": "Suivant",
       "yes": "Oui",
       "no": "Non",
-      "underwriting_product_details":"Détails du produit d'assurance",
-      "client":"Client",
-      "joint_account":"Compte joint",
-      "product":"Produit",
-      "policy_interface_type":"Type d'interface de police",
-      "policy_type":"Type de police",
-      "branch":"Branche",
-      "source":"Source",
-      "marketer":"Commercial",
-      "introducer":"Introducteur",
-      "contract_name":"Nom du contrat",
-      "cash_applicable":"Remise en argent applicable",
-      "scheme_policy":"Police de programme",
-      "policy_level_debit":"Débit au niveau de la police",
-      "open_policy":"Police ouverte",
-      "coinsurance_policy":"Police de coassurance",
-      "more_details":"Plus de détails"
+      "underwriting_product_details": "Détails du produit d'assurance",
+      "client": "Client",
+      "joint_account": "Compte joint",
+      "product": "Produit",
+      "policy_interface_type": "Type d'interface de police",
+      "policy_type": "Type de police",
+      "branch": "Branche",
+      "source": "Source",
+      "marketer": "Commercial",
+      "introducer": "Introducteur",
+      "contract_name": "Nom du contrat",
+      "cash_applicable": "Remise en argent applicable",
+      "scheme_policy": "Police de programme",
+      "policy_level_debit": "Débit au niveau de la police",
+      "open_policy": "Police ouverte",
+      "coinsurance_policy": "Police de coassurance",
+      "more_details": "Plus de détails",
+      "cash": "Espèces",
+      "accrual": "Échéance"
     }
-
-    
-    
   },
   "lms": {
     "common": {},
