VQ-1608:: CRM Jr Issues Fix

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -122,7 +122,7 @@
     "Organization": "组织",
     "Countries": "国家",
     "Org Parameters": "组织参数",
-    "Currencies": "货币",
+    "Currencies & Currency Rates": "货币和汇率",
     "Post Levels": "职位级别",
     "Division": "部门",
     "Bank Setups": "银行设置",
