--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -122,7 +122,7 @@
     "Organization": "Organisation",
     "Countries": "Länder",
     "Org Parameters": "Org-Parameter",
-    "Currencies": "Währungen",
+    "Currencies & Currency Rates": "Valuta's & Wisselkoersen",
     "Post Levels": "Beitragsstufen",
     "Division": "Abteilung",
     "Bank Setups": "Bankeneinrichtungen",
