--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -122,7 +122,7 @@
     "Organization": "Organization",
     "Countries": "Countries",
     "Org Parameters": "Org Parameters",
-    "Currencies": "Currencies",
+    "Currencies & Currency Rates": "Currencies & Currency Rates",
     "Post Levels": "Post Levels",
     "Division": "Division",
     "Bank Setups": "Bank Setups",
@@ -521,68 +521,68 @@
     "zero": "Zero"
   },
   "gis": {
-    "quotation":{
-      "new_client":"New Client",
-      "existing_client":"Existing Client",
-      "name":"Name",
-      "year_of_manufacture":"Year of Manufacture",
-      "value":"Value",
-      "basic_premium":"Basic Premium",
-      "levies_and_taxes":"Levies and Taxes",
-      "total_payable_premium":"Total Payable Premium",
-      "value_of_vehicle":"Value of Vehicle",
-      "premium":"Premium",
-      "add_more_benefits":"Add more benefits",
-      "view_cover_details":"View Cover Details",
-      "share_quote":"Share Quote",
-      "select_cover":"Select Cover",
-      "additional_benefits":"Additional Benefits",
-      "excess_applicable_under_the_cover":"Excess applicable under the cover",
-      "cover_details":"Cover Details",
-      "details":"Details",
-      "benefits":"Benefits",
-      "close":"Close",
-      "quote-details":"Quote details",
-      "quote-number":"Quote number",
-      "name_of_insured":"Name of insured",
-      "intermediary":"Intermediary",
-      "add_another_risk":"Add another risk",
-      "cancel_quote":"Cancel quote",
-      "accept_quote":"Accept quote"
+    "quotation": {
+      "new_client": "New Client",
+      "existing_client": "Existing Client",
+      "name": "Name",
+      "year_of_manufacture": "Year of Manufacture",
+      "value": "Value",
+      "basic_premium": "Basic Premium",
+      "levies_and_taxes": "Levies and Taxes",
+      "total_payable_premium": "Total Payable Premium",
+      "value_of_vehicle": "Value of Vehicle",
+      "premium": "Premium",
+      "add_more_benefits": "Add more benefits",
+      "view_cover_details": "View Cover Details",
+      "share_quote": "Share Quote",
+      "select_cover": "Select Cover",
+      "additional_benefits": "Additional Benefits",
+      "excess_applicable_under_the_cover": "Excess applicable under the cover",
+      "cover_details": "Cover Details",
+      "details": "Details",
+      "benefits": "Benefits",
+      "close": "Close",
+      "quote-details": "Quote details",
+      "quote-number": "Quote number",
+      "name_of_insured": "Name of insured",
+      "intermediary": "Intermediary",
+      "add_another_risk": "Add another risk",
+      "cancel_quote": "Cancel quote",
+      "accept_quote": "Accept quote"
     },
-    "policy":{
-      "underwriting_new_transaction":"Underwriting: New transaction",
-      "type_of_transaction":"Type of transaction",
+    "policy": {
+      "underwriting_new_transaction": "Underwriting: New transaction",
+      "type_of_transaction": "Type of transaction",
       "new_business": "New business",
       "endorsement": "Endorsement",
       "contra_transaction": "Contra-transaction",
       "mid_term_endorsement": "Mid-term endorsements",
       "is_the_policy_short_period": "Is the policy short period",
-      "is_the_policy_renewable":"Is the policy renewable",
-      "is_it_a_new_client":"Is it a new Client",
+      "is_the_policy_renewable": "Is the policy renewable",
+      "is_it_a_new_client": "Is it a new Client",
       "cancel": "Cancel",
       "next": "Next",
       "yes": "Yes",
       "no": "No",
-      "underwriting_product_details":"Policy product details",
-      "client":"Client",
-      "joint_account":"Joint account",
-      "product":"Product",
-      "policy_interface_type":"Policy interface type",
-      "policy_type":"Policy type",
-      "branch":"Branch",
-      "source":"Source",
-      "marketer":"Marketer",
-      "introducer":"Introducer",
-      "contract_name":"Contract name",
-      "cash_applicable":"Cashback applicable",
-      "scheme_policy":"Scheme policy ",
-      "policy_level_debit":"Policy level debit",
-      "open_policy":"Open policy",
-      "coinsuarance_policy":"Coinsurance policy",
-      "more_details":"More Details",
-      "cash":"Cash",
-      "accrual":"Accrual"
+      "underwriting_product_details": "Policy product details",
+      "client": "Client",
+      "joint_account": "Joint account",
+      "product": "Product",
+      "policy_interface_type": "Policy interface type",
+      "policy_type": "Policy type",
+      "branch": "Branch",
+      "source": "Source",
+      "marketer": "Marketer",
+      "introducer": "Introducer",
+      "contract_name": "Contract name",
+      "cash_applicable": "Cashback applicable",
+      "scheme_policy": "Scheme policy ",
+      "policy_level_debit": "Policy level debit",
+      "open_policy": "Open policy",
+      "coinsuarance_policy": "Coinsurance policy",
+      "more_details": "More Details",
+      "cash": "Cash",
+      "accrual": "Accrual"
     }
   },
   "lms": {
