--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -122,7 +122,7 @@
     "Organization": "Organización",
     "Countries": "Países",
     "Org Parameters": "Parámetros de la organización",
-    "Currencies": "Monedas",
+    "Currencies & Currency Rates": "Monedas y Tasas de Cambio",
     "Post Levels": "Niveles de puesto",
     "Division": "División",
     "Bank Setups": "Configuraciones bancarias",
