--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -122,7 +122,7 @@
     "Organization": "Shirika",
     "Countries": "Nchi",
     "Org Parameters": "Parameta za Shirika",
-    "Currencies": "Fedha",
+    "Currencies & Currency Rates": "Fedha na Viwango vya Kubadilisha Fedha",
     "Post Levels": "Viwango vya Posta",
     "Division": "Mgawanyiko",
     "Bank Setups": "Vipimo vya Benki",
