--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -122,7 +122,7 @@
     "Organization": "Organisation",
     "Countries": "Pays",
     "Org Parameters": "Paramètres de l'org",
-    "Currencies": "Devises",
+    "Currencies & Currency Rates": "Devises et Taux de Change",
     "Post Levels": "Niveaux de poste",
     "Division": "Division",
     "Bank Setups": "Paramètres bancaires",
